# pico-rgb2hdmi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  release_notes.txt
.github/workflows/: build_and_publish.yml  pipeline.yml
config/: common_configs.h  version.h.in
deprecated/dacTest/: CMakeLists.txt
deprecated/rgbScan/: fastADC.h
hw/: PCB_RGB2HDMI_2022-09-26.pcbdoc  PCB_RGB2HDMI_2022-10-02_beta3.pcbdoc  PickAndPlace_PCB_RGB2HDMI_2022-10-02.csv  RGB2HDMI.schdoc  RGB2HDMI_beta.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  common_configs.h  main.c
src/autodetection/: CMakeLists.txt  autodetection.c  autodetection.h
src/cmdParser/: CMakeLists.txt  cmdParser.c  cmdParser.h
src/color/: CMakeLists.txt  color.c  color.h
src/commands/: CMakeLists.txt  commands.c  commands.h
src/graphics/: CMakeLists.txt  font_8x8.h  font_C64_8x8.h  graphics.c  graphics.h
src/gui/: CMakeLists.txt  gui.c  gui.h
src/keyboard/: CMakeLists.txt  keyboard.c  keyboard.h
src/libdvi/: CMakeLists.txt  audio_ring.c  data_packet.c  data_packet.h  dvi.c  dvi.h  dvi_config_defs.h  dvi_serialiser.c  dvi_serialiser.h  dvi_serialiser.pio  dvi_timing.c  dvi_timing.h  tmds_encode.c  tmds_encode.h
src/menu/: CMakeLists.txt  menu.c  menu.h  menuCallback.c  menuCallback.h  menuGlobals.c  menuGlobals.h
src/overlay/: CMakeLists.txt  overlay.c  overlay.h
src/rgbScan/: CMakeLists.txt  afeFrontPorch.pio  fastADC.c  fastADC.pio  hsync.pio  hsyncChain.pio  nanoSystick.c  nanoSystick.h  rgbScan.c  rgbScan.h  videoAdjust.c  videoAdjust.h  wm819xAfe.h  wm8213Afe.c  wm8213Afe.h  wm8213Afe.pio  wm821xAfe.h  wm8xxxAfe.c  wm8xxxAfe.h
src/securemodule/: CMakeLists.txt  securemodule.c  securemodule.h
src/security/: CMakeLists.txt  security.c  security.h  sha1.c  sha1.h
src/settings/: CMakeLists.txt  settings.c  settings.h
src/storage/: CMakeLists.txt  storage.c  storage.h
src/system/: CMakeLists.txt  system.c  system.h
src/timer/: CMakeLists.txt  timer.c  timer.h
test/: CMakeLists.txt
test/afeTest/: CMakeLists.txt  afeTest.c
test/cmdParserTest/: CMakeLists.txt  cmdParserTest.c
test/dacTest/: CMakeLists.txt  dacTest.c
test/graphicsTest/: CMakeLists.txt  graphicsTest.c
test/guiTest/: CMakeLists.txt  guiTest.c
test/hdmiTest/: CMakeLists.txt  hdmiTest.c
test/integrationTest/: CMakeLists.txt  integrationTest.c
test/keyboardTest/: CMakeLists.txt  keyboardTest.c
test/menuTest/: CMakeLists.txt  menuTest.c
test/rgbScanTest/: CMakeLists.txt  common_configs.h  rgbScanTest.c
test/securityTest/: CMakeLists.txt  securityTest.c
test/spriteTest/: CMakeLists.txt  retro_logo_128x128_rgb.h  spriteTest.c
test/storageTest/: CMakeLists.txt  storageTest.c
tools/: csv2png.py  file.csv  file_320_240_16.csv  packtiles  rgb2hdmiGui.py  serialCmd.py
tools/images/: file_640_240_8.csv
