add_subdirectory(libdvi)
add_subdirectory(rgbScan)
add_subdirectory(overlay)
add_subdirectory(security)
add_subdirectory(keyboard)
add_subdirectory(storage)
add_subdirectory(graphics)
add_subdirectory(gui)
add_subdirectory(cmdParser)
add_subdirectory(system)
add_subdirectory(commands)
add_subdirectory(app)

