add_subdirectory(libdvi)
add_subdirectory(libsprite)
add_subdirectory(color)
add_subdirectory(rgbScan)
add_subdirectory(graphics)
add_subdirectory(overlay)
add_subdirectory(security)
add_subdirectory(keyboard)
add_subdirectory(storage)
add_subdirectory(settings)
add_subdirectory(gui)
add_subdirectory(menu)
add_subdirectory(cmdParser)
add_subdirectory(commands)
add_subdirectory(system)
add_subdirectory(timer)